@startuml DER Syshub

!define PK(x) <b>PK: x</b>
!define FK(x) <i>FK: x</i>

skinparam linetype ortho
skinparam class {
    BackgroundColor White
    ArrowColor #2D4059
    BorderColor #2D4059
}

entity "roles" as rol {
    PK(id_rol)
    --
    nombre_rol
    descripcion
}

entity "estados" as estado {
    PK(id_estado)
    --
    nombre_estado
}

entity "usuarios" as usuario {
    PK(id_usuario)
    --
    nombre
    apellido
    correo
    password_hash
    FK(id_rol)
    FK(id_estado)
    fecha_registro
}

entity "sesiones" as sesion {
    PK(id_sesion)
    --
    FK(id_usuario)
    token_sesion
    fecha_inicio
    ip_origen
    dispositivo
}

entity "pensum" as pensum {
    PK(id_pensum)
    --
    codigo_pensum
    anio_vigencia
}

entity "area_tecnica" as area {
    PK(id_area)
    --
    nombre_area
}

entity "cursos" as curso {
    PK(id_curso)
    --
    nombre_curso
    FK(id_area)
    FK(id_pensum)
}

entity "cursos_auxiliar" as c_aux {
    PK(id_curso_auxiliar)
    --
    FK(id_curso)
    FK(id_usuario)
    codigo_acceso
    fecha_creacion
}

entity "publicaciones" as pub {
    PK(id_publicacion)
    --
    titulo
    FK(id_usuario)
    FK(id_curso_auxiliar)
    FK(id_estado)
    fecha_creacion
    tipo_contenido
}

entity "tecnologias" as tec {
    PK(id_tecnologia)
    --
    nombre_tecnologia
    categoria
}

entity "proyectos" as proy {
    PK(FK(id_publicacion))
    --
    descripcion_tecnica
    url_adjunto
    es_destacado
    fecha_destacado
    FK(id_auxiliar_curador)
}

entity "proyecto_tecnologias" as p_tec {
    PK(FK(id_publicacion))
    PK(FK(id_tecnologia))
}

entity "posts_foros" as foro {
    PK(FK(id_publicacion))
    --
    es_pregunta_tecnica
    estado_resolucion
}

entity "articulos_blogs" as blog {
    PK(FK(id_publicacion))
    --
    cuerpo_extenso
    url_imagen_portada
}

entity "comentarios" as com {
    PK(id_comentario)
    --
    FK(id_publicacion)
    FK(id_usuario)
    contenido
    puntuacion_calidad
}

entity "etiquetas" as tag {
    PK(id_etiqueta)
    --
    nombre_tag
}

entity "tag_publicaciones" as p_tag {
    PK(FK(id_publicacion))
    PK(FK(id_etiqueta))
}

entity "reportes" as rep {
    PK(id_reporte)
    --
    FK(id_publicacion)
    FK(id_usuario_reporta)
    motivo_denuncia
    FK(id_moderador_asignado)
    estado_resolucion
}

entity "asignaciones_cursos" as asig {
    PK(id_asignacion)
    --
    FK(id_usuario)
    FK(id_curso_auxiliar)
    fecha_asignacion
}

entity "entregas_tareas" as entrega {
    PK(id_entrega)
    --
    FK(id_publicacion)
    FK(id_usuario)
    enlace_recurso
    comentario_estudiante
    fecha_entrega
    calificacion
    FK(id_estado)
}

' Relaciones
rol ||--{ usuario
estado ||--{ usuario
estado ||--{ pub
estado ||--{ entrega

usuario ||--{ sesion
usuario ||--{ c_aux
usuario ||--{ pub
usuario ||--{ com
usuario ||--{ rep
usuario ||--{ asig
usuario ||--{ entrega
usuario ||--{ proy

pensum ||--{ curso
area ||--{ curso
curso ||--{ c_aux
c_aux ||--{ pub
c_aux ||--{ asig

pub ||--|| proy
pub ||--|| foro
pub ||--|| blog

pub ||--{ com
pub ||--{ p_tag
pub ||--{ rep
pub ||--{ entrega

tag ||--{ p_tag
tec ||--{ p_tec
proy ||--{ p_tec

@enduml